// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton test iconButton disabled state 1`] = `
.c0 {
  background: none;
  border: none;
  padding: 0;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 svg {
  fill: #4475E3;
}

.c0:active,
.c0:enabled:hover {
  cursor: pointer;
}

.c0:active svg,
.c0:enabled:hover svg {
  fill: #4475E3;
}

.c0:disabled svg {
  fill: #DBDBDB;
}

<body>
  <div>
    <button
      class="c0"
      color="primary"
      data-testid="iconButton"
      disabled=""
    >
      <svg
        data-testid="icon"
      />
    </button>
  </div>
</body>
`;

exports[`IconButton test iconButton render 1`] = `
.c0 {
  background: none;
  border: none;
  padding: 0;
  height: 1rem;
  width: 1rem;
}

.c0 svg {
  fill: #4475E3;
}

.c0:active,
.c0:enabled:hover {
  cursor: pointer;
}

.c0:active svg,
.c0:enabled:hover svg {
  fill: #4475E3;
}

.c0:disabled svg {
  fill: #DBDBDB;
}

<body>
  <div>
    <button
      class="c0"
      color="primary"
      data-testid="iconButton"
    >
      <svg
        data-testid="icon"
      />
    </button>
  </div>
</body>
`;
